Rewrote code to run on Java 1.8