@@ -1,5 +1,7 @@
 package com.bdd.workshop.exceptionHandling;
 
+import javax.servlet.http.HttpServletRequest;
+
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
@@ -8,18 +10,18 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
-import org.springframework.web.servlet.resource.NoResourceFoundException;
+import org.springframework.web.servlet.NoHandlerFoundException;
 import org.springframework.web.util.WebUtils;
-
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import jakarta.servlet.http.HttpServletRequest;
 
 @RestControllerAdvice
 public class CustomWebExceptionHandler {
     private static final Logger LOGGER = LoggerFactory.getLogger(CustomWebExceptionHandler.class);
 
     @ExceptionHandler(CustomRuntimeException.class)
-    public ResponseEntity<ErrorResponse> handleCustomException(CustomRuntimeException ex, HttpServletRequest request) {
+    public ResponseEntity<ErrorResponse> handleCustomException(
+        CustomRuntimeException ex,
+        HttpServletRequest request
+    ) {
         ErrorResponse errorResponse = new ErrorResponse(
             ex.getErrorCode(),
             ex.getErrorMessage()
@@ -28,27 +30,20 @@ public class CustomWebExceptionHandler {
         return createResponseEntity(errorResponse, ex.getHttpStatus(), ex, request);
     }
 
-    @ExceptionHandler(NoResourceFoundException.class)
+    @ExceptionHandler(NoHandlerFoundException.class)
     @ResponseStatus(HttpStatus.NOT_FOUND)
-    @ApiResponse(
-        responseCode = "404",
-        description = "The endpoint you are trying to reach does not exist"
-    )
     public ResponseEntity<ErrorResponse> handleEndpointNotFoundException(
-        NoResourceFoundException ex,
+        NoHandlerFoundException ex,
         HttpServletRequest request
     ) {
-        ErrorResponse errorResponse = new ErrorResponse(
-            "UNKNOWN_ENDPOINT",
-            "Endpoint %s %s does not exist".formatted(ex.getHttpMethod(), ex.getResourcePath())
-        );
+        String formattedMessage = String.format("Endpoint %s %s does not exist", ex.getHttpMethod(), ex.getRequestURL());
+        ErrorResponse errorResponse = new ErrorResponse("UNKNOWN_ENDPOINT", formattedMessage);
 
         return createResponseEntity(errorResponse, HttpStatus.NOT_FOUND, ex, request);
     }
 
     @ExceptionHandler(Exception.class)
     @ResponseStatus(HttpStatus.INTERNAL_SERVER_ERROR)
-    @ApiResponse(responseCode = "500", description = "Internal error in the service")
     public ResponseEntity<ErrorResponse> handleUnknownException(Exception ex, HttpServletRequest request) {
         ErrorResponse errorResponse = new ErrorResponse(
             "Internal error",
